--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -9,13 +9,13 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        justify-content: center;
+        justify-content: flex-end;
     }
 
     &__summary {
         --flow-space: #{get-size(500)};
         font-size: get-size(600);
-        font-weight: 500;
+        font-weight: 700;
 
         a {
             color: currentColor;
@@ -44,9 +44,13 @@
     margin-top: 0;
 }
 
-@media screen and (min-width: 768px) {
+@include media-query('md') {
     .intro {
         height: 600px;
+
+        .wrapper {
+            justify-content: center;
+        }
     }
 }
 
