--- a/src/scss/components/_site-head.scss
+++ b/src/scss/components/_site-head.scss
@@ -7,5 +7,11 @@
 
 .site-logo {
     fill: var(--color-light);
-    width: 75px;
+    width: 60px;
+}
+
+@include media-query('md') {
+    .site-logo {
+        width: 75px;
+    }
 }
