🐛 site.webmanifest fixes
Fixes #55

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,10 +10,10 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-	<link rel="manifest" href="i/mages/favicons/site.webmanifest">
-	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#603cba">
-	<meta name="theme-color" content="#ffffff">
+	<link rel="manifest" href="/images/favicons/site.webmanifest">
+	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#32325d">
+	<meta name="msapplication-TileColor" content="#32325d">
+	<meta name="theme-color" content="#32325d">
 
 	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Regular.woff2" />
 	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Medium.woff2" />
