--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -13,7 +13,7 @@
 				<div class="[ sf-flow ]">
 					<h3 class="[ text-600 leading-tight ]">{{ people.data.title }}</h3>
 					<p class="[ text-300 ]">{{ people.data.shortDescription }}</p>
-					<a href="{{ people.data.url }}" class="link-hover" target="_blank" rel="external">{{ people.data.url }}</a>
+					<a href="{{ people.data.url }}" class="link-hover" target="_blank" rel="noreferrer">{{ people.data.url }}</a>
 				</div>
 			</li>
 		{% endfor %}
