♿️ Footer colour contrast improvements
Fixes #57

--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -9,16 +9,17 @@
 
     p,
     a {
-        opacity: 0.5;
-        transition: opacity 0.5s ease;
+        color: #969697;
+        transition: color 0.5s ease;
     }
 
     a {
         &:hover {
-            opacity: 1;
+            color: var(--color-light);
         }
     }
 
+    // Outputs: .site-foot__credit
     &__credit {
         text-align: center;
 
@@ -31,6 +32,7 @@
         }
     }
 
+    // Outputs: .site-foot__details
     &__details {
         align-items: center;
         display: flex;
@@ -38,15 +40,36 @@
         width: 100%;
     }
 
+    // Outputs: .site-foot__icon
     &__icon {
+        &:hover,
+        &:focus {
+            svg {
+                fill: var(--color-light);
+            }
+        }
+
         svg {
-            fill: var(--color-light);
+            fill: #969697;
             height: 45px;
+            transition: fill 0.5s ease;
             width: 45px;
         }
     }
 
-    .site-logo {
-        width: 50px;
+    // Outputs: .site-foot__logo
+    &__logo {
+        &:hover,
+        &:focus {
+            .site-logo {
+                fill: var(--color-light);
+            }
+        }
+
+        .site-logo {
+            fill: #969697;
+            transition: fill 0.5s ease;
+            width: 50px;
+        }
     }
 }
