🐛 Trying to fix Journal posts

--- a/src/_includes/layouts/articles.njk
+++ b/src/_includes/layouts/articles.njk
@@ -7,7 +7,7 @@
 
 {# Post list content #}
 {% set postListHeading = 'All Articles' %}
-{% set postListItems = collections.posts %}
+{% set postListItems = collections.articles %}
 
 {% block content %}
   <main id="main-content" tabindex="-1">
