🐛 Journal list fix
Fixes #56

--- a/src/_includes/layouts/journal.njk
+++ b/src/_includes/layouts/journal.njk
@@ -7,7 +7,7 @@
 
 {# Post list content #}
 {% set postListHeading = 'Journal Items' %}
-{% set postListItems = collections.journal %}
+{% set journalListItems = collections.journal %}
 
 {% block content %}
   <main id="main-content" tabindex="-1">
