♿️ Footer Codepen icon a11y text

--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -38,6 +38,7 @@
 							l11.159-7.463l13.822,9.245V87.953z M60,67.543L48.723,60L60,52.458L71.276,60L60,67.543z M63.188,87.953V73.082l13.823-9.245
 							L88.17,71.3L63.188,87.953z M90.723,65.336L82.746,60l7.977-5.335V65.336z"/>
 				</svg>
+				<span class="visually-hidden">James Bateson Codepen profile</span>
 			</a>
         </article>
       {% endif %}
