✨ Variable font integration

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,10 +15,7 @@
 	<meta name="msapplication-TileColor" content="#32325d">
 	<meta name="theme-color" content="#32325d">
 
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Regular.woff2" />
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Medium.woff2" />
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Bold.woff2" />
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter-Black.woff2" />
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/Inter.var.woff2" />
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
