--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,35 +10,8 @@
 
 @font-face {
     font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    src: local('Inter'), url('/fonts/Inter-Regular.woff2') format('woff2'),
-        url('/fonts/Inter-Regular.woff') format('woff');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    src: local('Inter'), url('/fonts/Inter-Medium.woff2') format('woff2'),
-        url('/fonts/Inter-Medium.woff') format('woff');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 700;
-    src: local('Inter'), url('/fonts/Inter-Bold.woff2') format('woff2'), url('/fonts/Inter-Bold.woff') format('woff');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 700;
-    src: local('Inter'), url('/fonts/Inter-Black.woff2') format('woff2'), url('/fonts/Inter-Black.woff') format('woff');
+    src: local('Inter'), url('/fonts/Inter.var.woff2') format('woff2');
+    font-weight: 1 999;
     font-display: swap;
 }
 
@@ -53,7 +26,7 @@ h1,
 h2,
 h3 {
     @include apply-utility('font', 'base');
-    font-weight: 700;
+    font-weight: 900;
 }
 
 h1 {
