--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: Inter;
-    src: local('Inter'), url('/fonts/Inter.var.woff2') format('woff2');
+    src: local('Inter'), url('/fonts/inter.woff2') format('woff2');
     font-weight: 1 999;
     font-display: swap;
 }
