--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -13,6 +13,7 @@
     src: local('Inter'), url('/fonts/inter.woff2') format('woff2');
     font-weight: 1 999;
     font-display: swap;
+    font-feature-settings: 'ss01', 'ss02', 'case';
 }
 
 body {
