--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -29,7 +29,7 @@
             white-space: pre;
             padding: 0 0.2em;
             text-decoration: none;
-            transition: 0.35s cubic-bezier(0.37, 0.01, 0.43, 1.3);
+            transition: background-size 0.35s ease, color 0.35s ease;
         }
 
         a:not([class]):hover {
