🐛  Removed overflow from nav list
Fixes #77 - Article tags list overflow issue

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,8 +1,8 @@
 .nav {
     &__list {
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: none;
+        // overflow-x: auto;
+        // -webkit-overflow-scrolling: touch;
+        // -ms-overflow-style: none;
 
         &::-webkit-scrollbar {
             display: none;
