--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,13 +7,16 @@
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 
+	<link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
 	<link rel="manifest" href="/images/favicons/site.webmanifest">
-	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#32325d">
-	<meta name="msapplication-TileColor" content="#32325d">
-	<meta name="theme-color" content="#32325d">
+	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#8017ba">
+	<link rel="shortcut icon" href="/images/favicons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#8017ba">
+	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#8017ba">
 
 	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/inter.woff2" />
 
