--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -7,18 +7,6 @@
     --color-selection-text: #{get-color('dark')};
     --color-selection-bg: #{get-color('light')};
 
-    p,
-    a {
-        opacity: 0.5;
-        transition: opacity 0.5s ease;
-    }
-
-    a {
-        &:hover {
-            opacity: 1;
-        }
-    }
-
     &__credit {
         text-align: center;
 
@@ -36,6 +24,15 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+
+        a {
+            opacity: .5;
+            transition: opacity .5s ease;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
     }
 
     &__icon {
