bugfix: removed local font declaration
this was causing the font to look wrong, if not the right version of inter installed for example

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
 	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#8017ba">
 
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/inter.woff2" />
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter.woff2" crossorigin/>
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
