--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -14,6 +14,9 @@
 {# Post list content #}
 {% set peopleListItems = collections.people %}
 
+{# Project list content #}
+{% set projectListItems = collections.projects %}
+
 {# Archive link #}
 {% if postListItems.length < collections.posts.length %}
   {% set paginationNextText = archiveButtonText %}
@@ -23,8 +26,9 @@
 {% block content %}
   <main id="main-content" tabindex="-1">
     {% include "partials/components/intro.njk" %}
-	{% include "partials/components/about.njk" %}
+	  {% include "partials/components/about.njk" %}
     {% include "partials/components/article-list.njk" %}
     {% include "partials/components/people-list.njk" %}
+    {% include "partials/components/project-list.njk" %}
   </main>
 {% endblock %}
