--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -1,11 +1,11 @@
 {% if projectListItems.length %}
   <section class="[ post-list ] [ pad-top-900 pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
-      <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">{{ project.label }}</h2>
+      <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Projects</h2>
 	  <p class="section-intro">My featured projects. Mainly silly little ideas that I've used a chance
       to practice using a new technology/technique. Take a look at my Codepen for more examples of my work.</p>
       <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-800 ]" reversed>
-        {% for item in postListItems %}
+        {% for item in projectListItems %}
           <li class="post-list__item">
             <h3 class="font-base leading-tight text-600">
               <a href="{{ item.url }}" class="post-list__link link-hover" rel="bookmark">{{ item.data.title }}</a>
