--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -4,12 +4,12 @@
       <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Projects</h2>
 	  <p class="section-intro">My featured projects. Mainly silly little ideas that I've used a chance
       to practice using a new technology/technique. Take a look at my Codepen for more examples of my work.</p>
-      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-800 ]" reversed>
+      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-800 ] [ md:width-half ]" reversed>
         {% for item in projectListItems %}
-          <li class="[ post-list__item ] [ sf-flow ]">
-            <h3 class="[ font-base leading-tight text-600 ]">{{ item.data.title }}</h3>
-            <p><a href="{{ item.data.url }}" class="post-list__link link-hover" rel="noopener" target="_blank">{{ item.data.url }}</a></p>
-            <p>{{ item.shortDescription | safe }}</p>
+          <li class="[ post-list__item ]">
+            <h3 class="[ font-base text-600 ] [ pad-bottom-300 ]">{{ item.data.title }}</h3>
+            <p class="[ pad-bottom-300 ]"><a href="{{ item.data.url }}" class="post-list__link link-hover" rel="noopener" target="_blank">{{ item.data.url }}</a></p>
+            <p>{{ item.data.shortDescription | safe }}</p>
           </li>
         {% endfor %}
       </ol>
