feat: site redesign
BREAKING CHANGE: complete rework of a lot of global site components and modules

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,7 +18,8 @@
 	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#8017ba">
 
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/inter.woff2" crossorigin/>
+	{# <link rel="preload" as="font" type="font/woff2" href="/fonts/inter.woff2" crossorigin/> #}
+	<link rel="stylesheet" href="https://use.typekit.net/fok2dsf.css">
 
 	{% include "partials/global/meta-info.njk" %}
 	<style>{% include "assets/css/global.css" %}</style>
