--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,4 +1,4 @@
-<header class="[ intro ] [ pad-top-900 pad-bottom-max ]">
+<header class="[ intro ] [ pad-top-max pad-bottom-max ]">
   <div class="wrapper [ sf-flow ]">
     <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
     {% if introSummary %}
