--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -1,15 +1,18 @@
 {% if projectListItems.length %}
-  <section class="[ post-list ] [ pad-top-900 pad-bottom-max ]">
+  <section class="[ project-list ] [ pad-top-600 pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Projects</h2>
-	  <p class="section-intro">My featured projects. Mainly silly little ideas that I've used a chance
+	    <p class="section-intro">My featured projects. Mainly silly little ideas that I've used a chance
       to practice using a new technology/technique. Take a look at my Codepen for more examples of my work.</p>
-      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-800 ] [ md:width-half ]" reversed>
+      <ol class="[ project-list__items ] [ pad-top-500 ]" reversed>
         {% for item in projectListItems %}
-          <li class="[ post-list__item ]">
-            <h3 class="[ font-base text-600 ] [ pad-bottom-300 ]">{{ item.data.title }}</h3>
-            <p class="[ pad-bottom-300 ]"><a href="{{ item.data.url }}" class="post-list__link link-hover" rel="noopener" target="_blank">{{ item.data.url }}</a></p>
-            <p>{{ item.data.shortDescription | safe }}</p>
+          <li class="[ project-list__item ] [ sf-flow ]">
+            <img src="https://picsum.photos/500/500" class="project-list__image" alt="" loading="lazy">
+              <div class="project-list__content">
+                <h3 class="[ font-base text-600 ]">{{ item.data.title }}</h3>
+                <p>{{ item.data.shortDescription | safe }}</p>
+                <a href="#" class="[ weight-600 ]">View project</a>
+              </div>
           </li>
         {% endfor %}
       </ol>
