--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -20,13 +20,13 @@
         &.active {
             a {
                 &:after {
-                    width: 100%;
+                    width: 50%;
                 }
             }
         }
 
         a {
-            color: var(--color-light);
+            color: var(--color-dark);
             font-size: get-size(500);
             font-weight: 600;
 
@@ -45,11 +45,42 @@
     }
 }
 
+@media screen and (max-width: 47.9rem) {
+    .site-logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .nav,
+    .nav ul {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .nav__item {
+        &.hide-mobile {
+            display: none;
+        }
+
+        a {
+            font-size: .95rem;
+        }
+    }
+}
+
 @include media-query('md') {
     .nav {
         &__list {
             > * + * {
                 margin-left: get-size(700);
+            }
+
+            &--tags {
+                > * + * {
+                    margin-left: get-size(500);
+                }
             }
         }
     }
