--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -11,7 +11,34 @@
  * GLOBAL STYLES
  */
 
+html {
+    background-color: var(--color-grey-light);
+    position: relative;
+
+    &:before,
+    &:after {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        content: '';
+        height: 200px;
+        opacity: .5;
+        position: absolute;
+        width: 200px;
+        z-index: -1;
+    }
+
+    &:before {
+        left: 0;
+        top: 50%;
+    }
+
+    &:after {
+        right: 0;
+        top: 20%;
+    }
+}
+
 body {
+    background: transparent;
     scroll-behavior: smooth;
 }
 
@@ -35,11 +62,12 @@ hr {
     text-decoration: none;
 
     &:after {
-        background-color: currentColor;
+        background-color: var(--color-theme-primary);
         content: '';
         display: block;
-        height: 2px;
-        transition: width 0.4s ease;
+        height: 3px;
+        margin-top: 3px;
+        transition: width .4s ease;
         width: 0;
     }
 
@@ -49,6 +77,15 @@ hr {
 
         &:after {
             width: 100%;
+        }
+    }
+}
+
+@include media-query('md') {
+    html {
+        &:before,
+        &:after {
+            opacity: 1;
         }
     }
 }
@@ -72,6 +109,7 @@ hr {
 @import 'components/people';
 @import 'components/post';
 @import 'components/post-list';
+@import 'components/project-list';
 @import 'components/site-head';
 @import 'components/site-foot';
 @import 'components/skip-link';
