--- a/src/_includes/partials/components/intro.njk
+++ b/src/_includes/partials/components/intro.njk
@@ -1,8 +1,14 @@
-<header class="[ intro ] [ pad-top-max pad-bottom-max ]">
-  <div class="wrapper [ sf-flow ]">
-    <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
-    {% if introSummary %}
-      <div class="[ intro__summary ] [ sf-flow ] [ leading-tight ]">{{ introSummary | safe }}</div>
+<header class="[ intro {% if introImage %} intro__flex {% endif %} ] [ pad-top-max pad-bottom-max ]">
+  <div class="[ wrapper ] [ {% if introImage %} sf-flow {% endif %}  ]">
+    <div class="[ sf-flow ]">
+      <h1 class="[ intro__heading ] [ text-800 md:text-max leading-tight ] [ p-name ]">{{ introHeading }}</h1>
+      {% if introSummary %}
+        <div class="[ intro__summary ] [ sf-flow ] [ leading-tight ]">{{ introSummary | safe }}</div>
+      {% endif %}
+    </div>
+
+    {% if introImage %}
+      <img src="{{ introImage }}" class="[ intro__image intro__image--{{ introImageClass }} ]" alt="" loading="eager">
     {% endif %}
   </div>
 </header>
