--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -4,7 +4,7 @@
 		<h2 class="[ people-list__heading ] [ text-700 md:text-900 ]">Inspiring Folks</h2>
 		<p class="section-intro">A few people who I work/have worked with that inspire me and have helped me grow as a developer - thank you! (there are more, but I can't find pictures of all their faces!)</p>
 		<div class="people-list__wrapper">
-			<ul class="[ people-list__items ] [ pad-top-500 ]" reversed>
+			<ul class="[ people-list__items ] [ pad-top-500 ]">
 			{% for people in collections.people %}
 				<li class="people-list__item [ sf-flow ]">
 					<div class="people-list__image">
