--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -42,7 +42,7 @@
     </div>
     {% if site.showThemeCredit %}
       <p class="[ site-foot__credit ] [ pad-top-900 ]">
-	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> and <a href="https://hylia.website/" target="_blank" rel="noreferrer">Hylia</a>. Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a>.
+	  	Built with <a href="https://www.11ty.io/" target="_blank" rel="noreferrer">Eleventy</a> &bull; Hosted on <a href="https://www.netlify.com/" target="_blank" rel="noreferrer">Netlify</a> &bull; <a href="/styleguide/">Style Guide</a>.
       </p>
     {% endif %}
   </div>
