--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -55,7 +55,18 @@ hr {
     max-width: 500px;
 }
 
-// Hover links
+// Links
+
+a:not([class]) {
+    color: currentColor;
+    text-decoration: underline;
+    text-decoration-color: var(--color-theme-primary);
+
+    &:hover,
+    &:focus {
+        color: var(--color-theme-primary);
+    }
+}
 
 .link-hover {
     display: inline-block;
@@ -65,8 +76,8 @@ hr {
         background-color: var(--color-theme-primary);
         content: '';
         display: block;
-        height: 3px;
-        margin-top: 3px;
+        height: 2px;
+        margin-top: 2px;
         transition: width .4s ease;
         width: 0;
     }
