style: project listing rework

--- a/src/_includes/partials/global/site-head.njk
+++ b/src/_includes/partials/global/site-head.njk
@@ -1,5 +1,5 @@
 <a class="skip-link" href="#main-content">Skip to content</a>
-<header role="banner" class="[ site-head ] [ pad-top-300 pad-bottom-100 ]">
+<header role="banner" class="[ site-head ] [ pad-bottom-100 ]">
 	<div class="wrapper">
 		<span class="visually-hidden">{{ site.name }}: {{ pageType }}</span>
 		<div class="[ site-head__inner ]">
