--- a/src/_includes/partials/components/people-list.njk
+++ b/src/_includes/partials/components/people-list.njk
@@ -2,7 +2,7 @@
 <section class="[ people-list ] [ pad-top-600 pad-bottom-max ]">
 	<div class="[ wrapper ] [ sf-flow ]">
 		<h2 class="[ people-list__heading ] [ text-700 md:text-900 ]">Inspiring Folks</h2>
-		<p class="section-intro">A few people who I work/have worked with that inspire me and have helped me grow as a developer - thank you! (there are more, but I can't find pictures of all their faces!)</p>
+		<p class="section-intro">A few people who I work/have worked with that inspire me and have helped me grow as a developer &ndash; thank you!</p>
 		<div class="people-list__wrapper">
 			<ul class="[ people-list__items ] [ pad-top-500 ]">
 			{% for people in collections.people %}
