--- a/src/_includes/partials/components/project-list.njk
+++ b/src/_includes/partials/components/project-list.njk
@@ -2,18 +2,20 @@
   <section class="[ project-list ] [ pad-top-600 pad-bottom-max ]">
     <div class="[ wrapper ] [ sf-flow ]">
       {% if page.url == '/' %}
-        <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Recent Projects</h2>
-        <p class="section-intro">Featured side projects and client work. I also build on <a href="https://codepen.io/jim-bateson">Codepen</a> and any source code is available on <a href="https://github.com/jimbateson">Github</a>.</p>
+        <h2 class="[ post-list__heading ] [ text-700 md:text-900 ]">Projects</h2>
+        <p class="section-intro">I also build on <a href="https://codepen.io/jim-bateson">Codepen</a> and any source code is available on <a href="https://github.com/jimbateson">Github</a>.</p>
       {% endif %}
       <ol class="[ project-list__items ] [ pad-top-500 ]" reversed>
         {% for item in projectListItems %}
           <li class="[ project-list__item ] [ sf-flow ]">
-            <img src="https://picsum.photos/500/500" class="project-list__image" alt="" loading="lazy">
-              <div class="project-list__content">
-                <h3 class="[ font-base text-600 ]">{{ item.data.title }}</h3>
-                <p>{{ item.data.shortDescription | safe }}</p>
-                <a href="{{ item.url }}" class="[ weight-600 ]">View project</a>
-              </div>
+            <a href="{{ item.url }}">
+              <img src="https://picsum.photos/500/500" class="project-list__image" alt="" loading="lazy">
+                <div class="project-list__content">
+                  <h3 class="[ font-base text-600 ]">{{ item.data.title }}</h3>
+                  <p class="leading-tight">{{ item.data.shortDescription | safe }}</p>
+                  <span class="[ weight-600 ]">View project</span>
+                </div>
+              </a>
           </li>
         {% endfor %}
       </ol>
