--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -17,6 +17,7 @@
 
     --color-light: #{get-color('light')};
     --color-grey-light: #{get-color('grey-light')};
+    --color-grey-med: #e9e9e9;
     --color-accent: #{get-color('accent')};
 }
 
