--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -123,7 +123,9 @@
         // post__body--resume
         &--resume {
             h2 {
+                border-bottom: 1px solid var(--color-grey-med);
                 margin-bottom: 40px;
+                padding-bottom: 20px;
             }
 
             h3 {
@@ -138,6 +140,10 @@
 
             h4 {
                 font-weight: 400;
+                margin-top: 5px;
+            }
+
+            h5 {
                 margin-top: 5px;
             }
         }
