--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -1,6 +1,6 @@
 .project-list__items {
     display: grid;
-    grid-gap: var(--flow-space);
+    gap: var(--flow-space);
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -12,57 +12,77 @@
     }
 }
 
+.project-list__content {
+    > * + * {
+        margin-top: 10px;
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .project-list__item {
-        display: grid;
-        overflow: hidden;
-        position: relative;
+        > a {
+            display: block;
+            position: relative;
+            overflow: hidden;
+        }
 
-        &:hover {
+        &:hover,
+        &:focus {
             .project-list__content {
-                transform: translateY(0);
+                transform: translateY(-1.75rem);
+                transition-delay: .05s;
+                transition-timing-function: cubic-bezier(.215,.61,.355,1);
 
-                a {
-                    opacity: 1;
-                    transform: translateY(0);
+                span {
+                    visibility: visible;
+opacity: 1;
+transition: visibility 0s linear 0s,opacity .2s cubic-bezier(.365,.005,.355,1);
                 }
             }
         }
     }
 
     .project-list__content {
-        background-color: var(--color-light);
+        // background-color: var(--color-light);
         box-sizing: border-box;
-        bottom: 0;
+        color: var(--color-light);
         display: grid;
-        grid-template-rows: 40px 50px 35px;
+        // grid-template-rows: 40px 50px 35px;
         left: 0;
+bottom: 40px;
+right: 0;
         margin: 0;
-        padding: var(--flow-space);
+        padding: 0 30px;
         position: absolute;
-        row-gap: 10px;
-        transform: translateY(35px);
-        transition: transform .35s;
+        // row-gap: 10px;
+        // transform: translateY(-35px);
+        transition: transform .3s cubic-bezier(.645,.045,.355,1), -webkit-transform .3s cubic-bezier(.645,.045,.355,1);
         width: 100%;
 
-        p {
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;  
-            overflow: hidden;
+        h3 {
+            font-size: get-size(700);
         }
 
-        a {
+        p {
+            font-size: get-size(500);
+        }
+
+        span {
+            color: var(--color-light);
             justify-self: flex-start;
             opacity: 0;
-            text-decoration-color: var(--color-theme-primary);
-            transform: translateY(60px);
             transition: opacity .35s, transform .35s;
+            will-change: opacity;
+            position: absolute;
+            top: 100%;
+            left: 30px;
+            transition: visibility 0s linear .2s,opacity .2s cubic-bezier(.365,.005,.355,1);
+            visibility: hidden;
 
-            &:hover,
-            &:focus {
-                color: var(--color-theme-primary);
-            }
+            // &:hover,
+            // &:focus {
+            //     color: var(--color-theme-primary);
+            // }
         }
     }
 }
