--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -54,6 +54,14 @@
             height: 175px;
             width: 175px;
         }
+
+        &--angled {
+            clip-path: polygon(100% 0, 0 0, 50% 100%);
+            position: absolute;
+            right: -200px;
+            width: 1000px;
+            z-index: -1;
+        }
     }
 }
 
