--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -18,46 +18,72 @@
     }
 }
 
+.project-single__body {
+    padding-right: 9.5rem;
+}
+
 @media screen and (min-width: 1280px) {
     .project-list__item {
         > a {
             display: block;
             position: relative;
             overflow: hidden;
+
+            &:before {
+                content: "";
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 110%;
+                background-color: rgba(12, 12, 12, .1);
+                z-index: 1;
+                opacity: 0;
+                transition: opacity .3s cubic-bezier(.75, 0, .5, 1);
+            }
         }
 
         &:hover,
         &:focus {
-            .project-list__content {
-                transform: translateY(-1.75rem);
-                transition-delay: .05s;
-                transition-timing-function: cubic-bezier(.215,.61,.355,1);
+            > a {
+            &:before {
+                opacity: 1;
+                transition-timing-function: cubic-bezier(.25,0,.125,1);
+            }
+        }
 
-                span {
-                    visibility: visible;
-opacity: 1;
-transition: visibility 0s linear 0s,opacity .2s cubic-bezier(.365,.005,.355,1);
+        img {
+            display: block;
+        }
+
+        .project-list__content {
+            transform: translateY(-1.75rem);
+            transition-delay: .05s;
+            transition-timing-function: cubic-bezier(.215,.61,.355,1);
+
+            span {
+                opacity: 1;
+                transition: visibility 0s linear 0s,opacity .2s cubic-bezier(.365, .005, .355, 1);
+                visibility: visible;
                 }
             }
         }
     }
 
     .project-list__content {
-        // background-color: var(--color-light);
         box-sizing: border-box;
         color: var(--color-light);
         display: grid;
-        // grid-template-rows: 40px 50px 35px;
         left: 0;
-bottom: 40px;
-right: 0;
+        bottom: 40px;
+        right: 0;
         margin: 0;
         padding: 0 30px;
         position: absolute;
-        // row-gap: 10px;
-        // transform: translateY(-35px);
-        transition: transform .3s cubic-bezier(.645,.045,.355,1), -webkit-transform .3s cubic-bezier(.645,.045,.355,1);
+        transition: transform .3s cubic-bezier(.645,.045,.355,1), -webkit-transform .3s cubic-bezier(.645, .045, .355, 1);
         width: 100%;
+        z-index: 2;
 
         h3 {
             font-size: get-size(700);
@@ -72,17 +98,12 @@ right: 0;
             justify-self: flex-start;
             opacity: 0;
             transition: opacity .35s, transform .35s;
-            will-change: opacity;
             position: absolute;
-            top: 100%;
             left: 30px;
+            top: 100%;
             transition: visibility 0s linear .2s,opacity .2s cubic-bezier(.365,.005,.355,1);
             visibility: hidden;
-
-            // &:hover,
-            // &:focus {
-            //     color: var(--color-theme-primary);
-            // }
+            will-change: opacity;
         }
     }
 }
