feat: some more project page idea tweaks

--- a/src/_includes/layouts/project-single.njk
+++ b/src/_includes/layouts/project-single.njk
@@ -7,7 +7,7 @@
 {% set introImage = bannerImage %}
 {% set introImageClass = 'angled' %}
 
-<p class="[ intro__meta ] [ text-500 weight-300 leading-tight ]">
+<p class="[ intro__meta ] [ pad-bottom-500 ] [ text-500 weight-300 leading-tight ]">
   {% if date %}
     <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
   {% endif %}
