--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -54,14 +54,6 @@
             height: 175px;
             width: 175px;
         }
-
-        &--angled {
-            clip-path: polygon(100% 0, 0 0, 50% 100%);
-            position: absolute;
-            right: -200px;
-            width: 1000px;
-            z-index: -1;
-        }
     }
 }
 
@@ -80,6 +72,20 @@
 
         .intro__summary {
             max-width: 600px;
+        }
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .intro {
+        &__image {
+            &--angled {
+                clip-path: polygon(100% 0, 0 0, 50% 100%);
+                position: absolute;
+                right: -200px;
+                width: 1000px;
+                z-index: -1;
+            }
         }
     }
 }
