--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -1,4 +1,4 @@
-{% set pageTitle = title + ' - ' + site.name %}
+{% set pageTitle = site.name + ' | ' + title %}
 {% set pageDesc = '' %}
 {% set siteTitle = site.name %}
 {% set currentUrl = site.url + page.url %}
