--- a/src/scss/components/_project-list.scss
+++ b/src/scss/components/_project-list.scss
@@ -10,11 +10,23 @@
     a {
         color: var(--color-dark);
     }
+
+    img {
+        display: block;
+    }
 }
 
 .project-list__content {
     > * + * {
         margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: map-get($metrics, 'md-breakpoint')) {
+    .project-single {
+        .intro {
+            padding-bottom: var(--flow-space);
+        }
     }
 }
 
