--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -9,6 +9,7 @@
 
 {# Post list content #}
 {% set postListHeading = postsHeading %}
+{% set postListSummary = postsSummary %}
 {% set postListItems = collections.postFeed %}
 
 {# Post list content #}
