--- a/src/_includes/layouts/resume.njk
+++ b/src/_includes/layouts/resume.njk
@@ -7,7 +7,7 @@
 
 {% block content %}
   <main id="main-content" tabindex="-1">
-    <article class="[ post ] [ h-entry ]">
+    <article class="[ post ] [ h-resume ]">
       {% include "partials/components/intro.njk" %}
       <div class="[ post__body post__body--resume ] [ inner-wrapper ] [ pad-top-600 pad-bottom-max text-500 ] [ sf-flow ] [ e-content ]">
         {{ content | safe }}
