--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -2,7 +2,7 @@
     &__body {
         --flow-space: #{get-size(800)};
 
-        p:first-of-type:not(.post-note) {
+        > p:first-of-type:not(.post-note) {
             @include apply-utility('font', 'heading');
             font-size: get-size(600);
             font-weight: 500;
