chore: some mobile tweaks

--- a/src/_includes/layouts/project-single.njk
+++ b/src/_includes/layouts/project-single.njk
@@ -8,7 +8,7 @@
 {% set introImageClass = 'angled' %}
 
 <p class="[ intro__meta ] [ pad-bottom-500 ] [ text-500 weight-300 leading-tight ]">
-  <a href="{{ url }}">{{ url | url }}</a>
+  <a href="{{ url }}">{{ url }}</a>
 </p>
 {% endset %}
 
