chore: new favicons
Updated new branding and use less files

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -121,6 +121,12 @@
     }
 }
 
+@media screen and (min-width: 1280px) {
+    .intro__image--angled {
+        min-width: 550px;
+    }
+}
+
 @media screen and (min-width: 1440px) {
     .intro {
         &__image {
