--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -85,3 +85,19 @@
         }
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .site-head .nav {
+        .nav__item {
+            a {
+                .light-nav & {
+                    color: var(--color-light);
+
+                    &:after {
+                        background-color: var(--color-light);
+                    }
+                }
+            }
+        }
+    }
+}
